[tool.poetry]
name = "pythontoolexperiments"
version = "0.1.0"
description = ""
authors = ["JasGujral <jasmeet.gujral@mostacktechnology.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
polars = "^0.20.22"
memory-profiler = "^0.61.0"
requests = "^2.31.0"
plotly = "^5.21.0"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
